--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <img src="profile.jpg" alt="Marcella Ria profile picture" class="profile-pic"/>
     <h1>Marcella Ria</h1>
-    <p>Email: marcella.ria@example.com | Phone: (555) 123-4567</p>
+    <p>Email: Ria062685@Gmail.com | Phone: (216) 650-2403</p>
   </header>
 
   <section class="summary">
@@ -25,14 +25,15 @@
   </section>
 
   <section class="skills">
-    <h2>Technologies</h2>
-    <ul>
-      <li><strong>Web Development:</strong> HTML, CSS, JavaScript</li>
-      <li><strong>Databases:</strong> PostgreSQL, MongoDB</li>
-      <li><strong>Testing:</strong> Jest</li>
-      <li><strong>Other:</strong> Git, GitHub, VS Code</li>
-    </ul>
-  </section>
+  <h2>Technologies</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript (beginner level)</li>
+    <li>GitHub</li>
+    <li>VS Code</li>
+  </ul>
+</section>
 
   <section class="projects">
     <h2>Projects</h2>
@@ -43,12 +44,14 @@
     </ul>
   </section>
 
-  <section class="contact">
-    <h2>Contact Me</h2>
-    <p>Let's connect and discuss more about software engineering!</p>
-    <p>GitHub: <a href="https://github.com/ria1985-creator" target="_blank">ria1985-creator</a></p>
-    <p>Learn more about my journey with Springboard.</p>
-  </section>
+  <section class="projects">
+  <h2>Projects</h2>
+  <ul>
+    <li>Springboard Project 1: Digital CV using HTML & CSS Box Model</li>
+    <li>More Springboard projects in progress...</li>
+  </ul>
+</section>
+  <p>GitHub: <a href="https://github.com/Ria1985-creator" target="_blank">Ria1985-creator</a></p>
 
 </body>
 </html>
